--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,9 +11,31 @@ jobs:
         name: Describe commit
         command: git describe --tags
     - run:
+        name: Install dependencies
+        command: |
+          sudo env GOOS=darwin GOARCH=amd64 $(which go) install std
+          wget -O /tmp/upx.tar.xz https://github.com/upx/upx/releases/download/v3.94/upx-3.94-amd64_linux.tar.xz
+          tar --strip=1 -C /tmp -xf /tmp/upx.tar.xz
+          sudo install /tmp/upx /usr/bin/upx
+    - run:
         name: Run tests
         command: |
           gofmt -l -s -w .
+    - run:
+        name: Build binary
+        command: CGO_ENABLED=0 GOOS=darwin GOARCH=amd64 go build -a -ldflags="-s -w" -o build/chromatic .
+    - run:
+        name: Compress binary
+        command: upx --best --ultra-brute build/chromatic
+    - run:
+        name: Checksum binary
+        command: sha256sum --binary --tag build/chromatic | tee checksums.txt
+    - store_artifacts:
+        path: build/chromatic
+        destination: /chromatic
+    - store_artifacts:
+        path: checksums.txt
+        destination: /checksums.txt
 
 workflows:
   version: 2
