--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,13 +14,16 @@ jobs:
         name: Install dependencies
         command: |
           sudo env GOOS=darwin GOARCH=amd64 $(which go) install std
+          go get golang.org/x/tools/cmd/goimports
           wget -O /tmp/upx.tar.xz https://github.com/upx/upx/releases/download/v3.94/upx-3.94-amd64_linux.tar.xz
           tar --strip=1 -C /tmp -xf /tmp/upx.tar.xz
           sudo install /tmp/upx /usr/bin/upx
     - run:
         name: Run tests
         command: |
-          gofmt -l -s -w .
+          gofmt -l -s -w $(find . -name '*.go' | grep -v /vendor/)
+          goimports -l -w $(find . -name '*.go' | grep -v /vendor/)
+          go test -race -v ./...
     - run:
         name: Build binary
         command: CGO_ENABLED=0 GOOS=darwin GOARCH=amd64 go build -a -ldflags="-s -w" -o build/chromatic .
