--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,27 +12,29 @@ jobs:
         command: git describe --tags
     - run:
         name: Install dependencies
+        working_directory: /tmp
         command: |
           sudo env GOOS=darwin GOARCH=amd64 $(which go) install std
           go get golang.org/x/tools/cmd/goimports
-          wget -O /tmp/upx.tar.xz https://github.com/upx/upx/releases/download/v3.94/upx-3.94-amd64_linux.tar.xz
-          tar --strip=1 -C /tmp -xf /tmp/upx.tar.xz
-          sudo install /tmp/upx /usr/bin/upx
+          wget https://github.com/upx/upx/releases/download/v3.94/upx-3.94-amd64_linux.tar.xz
+          tar --strip=1 -xf upx-3.94-amd64_linux.tar.xz
+          sudo install upx /usr/bin
     - run:
         name: Run tests
         command: |
-          gofmt -l -s -w $(find . -name '*.go' | grep -v /vendor/)
-          goimports -l -w $(find . -name '*.go' | grep -v /vendor/)
+          gofiles="$(find . -name '*.go' | grep -v /vendor/)"
+          test -z "$(gofmt -l -s  $gofiles)"
+          test -z "$(goimports -l $gofiles)"
           go test -race -v ./...
     - run:
         name: Build binaries
         command: |
-          VERSION="$(git describe --tags)"
+          version="$(git describe --tags)"
           CGO_ENABLED=0 GOOS=darwin GOARCH=amd64 go build -a \
-            -ldflags="-s -w -X main.version=$VERSION" \
+            -ldflags="-s -w -X main.version=$version" \
             -o artifacts/chromatic_darwin_amd64 .
           CGO_ENABLED=0 GOOS=darwin GOARCH=386 go build -a \
-            -ldflags="-s -w -X main.version=$VERSION" \
+            -ldflags="-s -w -X main.version=$version" \
             -o artifacts/chromatic_darwin_386 .
     - run:
         name: Compress binary
